implements jwt_token
