# src/routes/users.routes.ts
@@ -1,11 +1,25 @@
 import { Router } from "express";
+import multer from "multer";
 
+import uploadConfig from "../config/upload";
+import { ensureAutheticated } from "../middlewares/ensureAutheticated";
 import { CreateUserController } from "../modules/accounts/useCases/createUser/CreateUserController";
+import { UpdateUserAvatarController } from "../modules/accounts/useCases/updateUserAvatar/UpdateUserAvatarController";
 
 const createUserController = new CreateUserController();
+const updateUserAvatarController = new UpdateUserAvatarController();
+
+const uploadAvatar = multer(uploadConfig.upload("./tmp/avatar"));
 
 const usersRoutes = Router();
 
 usersRoutes.post("/", createUserController.handle);
+
+usersRoutes.patch(
+  "/avatar",
+  ensureAutheticated,
+  uploadAvatar.single("avatar"),
+  updateUserAvatarController.handle
+);
 
 export { usersRoutes };
